Dummy_Package_for_scratch_org/main/default/objects/Continuous_Integration_Permission__c/Continuous_Integration_Permission__c.object-meta.xml
<CustomObject>
    <label>Continuous Integration Permission</label>
    <nameField>
        <displayFormat>CIP-{00000}</displayFormat>
        <label>Permission Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Continuous Integration Permissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>