Dummy_Package_for_scratch_org/main/default/objects/Continuous_Integration_Permission__c/fields/Access__c.field-meta.xml
<CustomField>
    <fullName>Access__c</fullName>
    <label>Access</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Read Only</fullName>
                <default>true</default>
                <label>Read Only</label>
            </value>
            <value>
                <fullName>Run Continuous Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>