Dummy_Package_for_scratch_org/main/default/objects/Continuous_Integration_Permission__c/fields/Continuous_Integration__c.field-meta.xml
<CustomField>
    <fullName>Continuous_Integration__c</fullName>
    <label>Continuous Integration</label>
    <referenceTo>Continuous_Integration__c</referenceTo>
    <relationshipLabel>Continuous Integration Permissions</relationshipLabel>
    <relationshipName>Continuous_Integration_Permissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>