Dummy_Package_for_scratch_org/main/default/objects/Continuous_Integration_Permission__c/fields/Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>Email_Notification__c</fullName>
    <label>Email Notification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Build Failure</fullName>
            </value>
            <value>
                <fullName>On Build Success</fullName>
            </value>
            <value>
                <fullName>On Deploy Failure</fullName>
            </value>
            <value>
                <fullName>On Deploy Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>