Dummy_Package_for_scratch_org/main/default/objects/Continuous_Integration_Permission__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Continuous Integration Permissions</relationshipLabel>
    <relationshipName>Continuous_Integration_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>