Dummy_Package_for_scratch_org/main/default/objects/Continuous_Integration_Permission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Continuous_Integration__c</columns>
    <columns>User__c</columns>
    <columns>Access__c</columns>
    <columns>Email_Notification__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>